lab13/styles.css

--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4 {color: #0047AB;}
 a {color: #cf3232;}
 
 nav {
-    background-color: #518fb9; 
+    background-color: #0066ff; 
     padding: 10px;
     margin-bottom: 30px;
 }
