--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -14,6 +14,7 @@ nav {
     background-color: #0066ff; 
     padding: 10px;
     margin-bottom: 30px;
+    font-size: 2em;
 }
 
 nav a { color: #eeeae7;}
