--- a/lab14/styles.css
+++ b/lab14/styles.css
@@ -207,7 +207,7 @@ img {
     width: 1px;
     height: 1px;
     overflow: hidden;
-    display: none;
+    
   }
 
   .skip:focus {
@@ -216,4 +216,5 @@ img {
     height: auto;
   }
 
-  .skip-to-content{color: #000066;}
+  .skip-to-content{color: #000066;
+    display: none;}
