lab14/index.html

--- a/lab14/styles.css
+++ b/lab14/styles.css
@@ -200,32 +200,33 @@ img {
     }
 }
 
-.skip {
+.skip-to-content {
     position: absolute;
     left: -10000px;
     top: auto;
     width: 1px;
     height: 1px;
     overflow: hidden;
-    
-    
+    display:inline;
+    color: #000066;
   }
 
-  .skip:focus {
+  .skip-to-content:focus  {
     position: static;
     width: auto;
     height: auto;
-    display:show;
-    
+
+    visibility: visible;
   }
 
-  .skip-to-content{color: #000066;
-    display:none;
-     }
+  
+     
+  
 
-     .skip-to-content:focus{ display:show;}
+        
 
-   
-    
+        
+        
+
     
     
