--- a/project7/projectstyles.css
+++ b/project7/projectstyles.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4 {
 
 
 footer {
-    background-color: #efabd6;
+    background-color: #fa37b3f9;
     color: white;
     padding: 20px;
     text-align: center;
