--- a/project7/projectstyles.css
+++ b/project7/projectstyles.css
@@ -2,8 +2,15 @@ body {
     background-color: #ffffff; 
     color: #121212; 
     font-family: Georgia, serif;
+    overflow: scroll;  
 }
-
+html, body {
+    height: 100%;    /* Ensure the body takes up the full height of the page */
+    overflow: scroll; /* Forces the scrollbar to always be visible on the page */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 nav {
     background-color: #fa37b3f9; 
@@ -113,7 +120,6 @@ img.home {
 p {
     font-size: 1.1em;
     margin-bottom: 20px;
-    text-align: justify;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
@@ -142,22 +148,29 @@ section p {
 .dyslexia-types {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     gap: 20px;
     margin-top: 20px;
 }
 
 
 .dyslexia-type {
+    
     background-color: #e6f7ff; 
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 15px;
     width: 30%;  
     box-sizing: border-box;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); 
+    justify-content: flex-start; 
+    margin: 0 0 15px 15px; 
+    max-width: 100%; 
+    margin:auto;
+   
+    
 }
+
  .effects-image {
     padding: 20px;
     border-radius: 10px;
@@ -168,7 +181,8 @@ section p {
     
 }
 
-.dyslexia-type:hover, .effects-image:hover {
+
+.dyslexia-type:hover {
     transform: scale(1.05);  
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); 
 }
@@ -185,6 +199,8 @@ section p {
     font-size: 1.1em;
     line-height: 1.6;
     color: #333;
+    margin: 20px;  
+    
 }
 
 
@@ -278,7 +294,12 @@ section p {
     align-items: flex-start;  
     gap: 20px;  
     padding: 20px;
+    overflow-y: scroll;
+    overflow-x: scroll;
+    
 }
+
+
 
 
 .research-container, .research-section {
@@ -292,10 +313,16 @@ section p {
     width: 48%;  
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
     height: 400px;  
-    overflow-y: auto;  
+    overflow-y: scroll;
+    overflow-x: scroll; 
 }
 
-
+::-webkit-scrollbar-thumb:hover {
+    background: #555; }
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1; 
+      }
+       
 .research-container img, .research-section img {
     max-width: 200px; 
     height: auto;
@@ -310,7 +337,8 @@ section p {
     line-height: 1.4;    
     color: #333;
     max-height: 300px;   
-    overflow-y: auto;    
+    overflow-y: auto; 
+    overflow: scroll;
 }
 
 
@@ -382,3 +410,8 @@ section p {
     height: auto;
     visibility: visible;
   }
+
+
+
+
+  
