--- a/project7/projectstyles.css
+++ b/project7/projectstyles.css
@@ -16,10 +16,13 @@ nav {
     background-color: #fa37b3f9; 
     padding: 10px;
     margin-bottom: 30px;
+    align-items: center;
 }
 
 
-nav a { color: white;}
+nav a { color: white;
+    justify-content: space-around;
+    align-items: center;}
 
 nav a:hover {background-color: #ffc3ff;}
 
@@ -56,6 +59,10 @@ nav a:hover {background-color: #ffc3ff;}
 
 h1, h2, h3, h4 {
     color: #0047AB;
+    font-family: "Roboto Condensed", sans-serif;
+        font-optical-sizing: auto;
+        
+        font-style: normal;
 }
 
 
