--- a/project7/projectstyles.css
+++ b/project7/projectstyles.css
@@ -2,9 +2,6 @@ body {
     background-color: #ffffff; 
     color: #121212; 
     font-family: Georgia, serif;
-    
-}
-html, body {
     height: 100%;    
     margin: 0;
     padding: 0;
@@ -13,18 +10,14 @@ html, body {
 
 nav {
     background-color: #fa37b3f9; 
+    color: white;
     padding: 10px;
     margin-bottom: 30px;
-    align-items: center;
 }
 
-
-nav a { color: white;
-    justify-content: space-around;
-    align-items: center;}
+nav a { color: white;}
 
 nav a:hover {background-color: #ffc3ff;}
-
 
 .jamie, .nina, .michelle { 
     display: flex;  
@@ -39,7 +32,6 @@ nav a:hover {background-color: #ffc3ff;}
 }
 
 .page3 { 
-
     float: center;  
     margin: 0 0 10px 15px;  
     max-width: 250px;  
@@ -55,13 +47,11 @@ nav a:hover {background-color: #ffc3ff;}
     height: auto;
 }
 
-
 h1, h2, h3, h4 {
     color: #0047AB;
     font-family: "Roboto Condensed", sans-serif;
-        font-optical-sizing: auto;
-        
-        font-style: normal;
+     font-optical-sizing: auto;
+     font-style: normal;
 }
 
 
@@ -99,11 +89,7 @@ footer a {
     
 }
 
-footer a:hover {
-    text-decoration: underline;
-}
-
-
+footer a:hover {text-decoration: underline;}
 
 @media screen and (max-width: 768px) {
     nav a {
@@ -128,16 +114,7 @@ footer a:hover {
     }
 }
 
-img.home {
-    width: 100%;
-    max-width: 600px;
-    display: block;
-    margin: 20px auto;
-    border-radius: 10px;
-    
-}
-
-p {
+ p {
     font-size: 1.1em;
     margin-bottom: 20px;
     max-width: 800px;
@@ -145,7 +122,7 @@ p {
     margin-right: auto;
 }
 
-section img {
+.dyslexia img {
     width: 100%; 
     max-width: 600px; 
     height: auto; 
@@ -154,16 +131,7 @@ section img {
     display: block;
 }
 
-section {
-    margin-bottom: 40px;
-}
-
-section p {
-    margin-bottom: 15px;
-}
-
-
-
+section {margin-bottom: 40px;}
 
 .dyslexia-types {
     display: flex;
@@ -171,10 +139,7 @@ section p {
     gap: 20px;
     margin-top: 20px;
 }
-
-
 .dyslexia-type {
-    
     background-color: #e6f7ff; 
     padding: 20px;
     border-radius: 15px;
@@ -187,9 +152,8 @@ section p {
     margin: 0 0 15px 15px; 
     max-width: 100%; 
     margin:auto;
-   
-    
 }
+
 
  .effects-image {
     padding: 20px;
@@ -198,7 +162,6 @@ section p {
     box-sizing: border-box;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    
 }
 
 
@@ -212,15 +175,6 @@ section p {
     color: #0047AB;
     font-size: 1.3em;
     margin-bottom: 15px;
-}
-
-
-.dyslexia-type p, .effects-image p {
-    font-size: 1.1em;
-    line-height: 1.6;
-    color: #333;
-    margin: 20px;  
-    
 }
 
 
@@ -264,9 +218,7 @@ section p {
     border-radius: 15px;
     max-width: 100%;
     margin: 20px;
-    
 }
-
 
 .misconceptions img {
     max-width: 350px;   
@@ -276,12 +228,6 @@ section p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-
-.misconceptions .text {
-    flex: 1;  
-    text-align: left;  
 }
 
 
@@ -299,7 +245,6 @@ section p {
 
 
 .page2 { 
-
     float: center;  
     margin: 0 0 10px 15px;  
     max-width: 250px;  
@@ -307,57 +252,13 @@ section p {
     border-radius: 8px;  
     padding: 20px;  
     } 
-
-.research-row {
-    display: flex;
-    justify-content: space-between; 
-    align-items: flex-start;  
-    gap: 20px;  
-    padding: 20px;
     
-    
-}
-
-
-
-
-.research-container, .research-section {
-    display: flex;
-    flex-direction: column;  
-    align-items: center;     
-    justify-content: flex-start;
-    background-color: #e6f7ff;  
-    padding: 10px;
-    border-radius: 15px;
-    width: 48%;  
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
-    height: 400px;  
-    
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555; }
-    ::-webkit-scrollbar-track {
-        background: #f1f1f1; 
-      }
-       
-.research-container img, .research-section img {
-    max-width: 200px; 
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 10px;  
-}
-
-
-.research-container .text, .research-section .text {
-    text-align: left;   
-    font-size: 0.9em;    
-    line-height: 1.4;    
-    color: #333;
-    max-height: 300px;   
-    
-}
-
+    .research-container img, .research-section img {
+        max-width: 200px; 
+        height: auto;
+        border-radius: 8px;
+        margin-bottom: 10px;  
+    }
 
 @media screen and (max-width: 768px) {
     .research-row {
@@ -380,8 +281,6 @@ section p {
     }
 }
 
-
-
 .initiative-container {
     display: flex;
     align-items: center;  
@@ -394,13 +293,11 @@ section p {
     margin: 20px; 
 }
 
-
 .initiative-container img {
     max-width: 350px;  
     height: auto;
     border-radius: 8px;
 }
-
 
 .initiative-container .text {
     text-align: center;  
@@ -408,7 +305,6 @@ section p {
     line-height: 1.6;
     color: #333;
 }
-
 
 .skip-to-content {
     position: absolute;
@@ -428,11 +324,6 @@ section p {
     visibility: visible;
   }
 
-
-
-
-
-/* Mobile-friendly layout */
 @media (max-width: 768px) {
     .misconceptions {
         flex-direction: column;
